lab3 - #30 Added sns subscription

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,25 +14,34 @@
         "dfdc",
         "distro",
         "DNSNAME",
+        "drwxr",
+        "drwxrwxr",
+        "drwxrwxrwx",
         "eaefed",
         "ecfdcb",
         "Elbv",
+        "eujrkgh",
         "getenv",
         "githubsync",
         "hashlib",
         "hexdigest",
         "Hookshot",
         "Hostnames",
+        "IHRJZE",
         "kconvert",
         "KEYPAIR",
+        "lahrt",
         "levelname",
         "localnet",
         "mdep",
         "ncat",
+        "nfsnobody",
         "nfsvers",
         "nicc",
         "nmap",
         "nosql",
+        "OFXF",
+        "Oidc",
         "OLDPWD",
         "onboarded",
         "OPENZFS",
