--- a/labs/lab3-non-kinesis-example/cloudformation/1500_event_lambda_function.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1500_event_lambda_function.yaml
@@ -15,6 +15,8 @@ Parameters:
     Type: String
   LambdaFunctionSourceFileName:
     Type: String
+  DynamoDbStackName:
+    Type: String
 
 # Rules:
 #   set of rules
@@ -71,6 +73,26 @@ Resources:
             - "sqs:ChangeMessageVisibility"
             Resource:
               Fn::ImportValue: !Sub "${EventSqsQueueStackName}-EventQueueArn"
+      - PolicyName: EmployeeRecordsQueryLambdaFunctionPolicy02
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: "Allow"
+            Action:
+            - "dynamodb:PutItem"
+            - "dynamodb:GetItem"
+            - "dynamodb:Scan"
+            - "dynamodb:Query"
+            - "dynamodb:UpdateItem"
+            Resource:
+              - Fn::Sub:
+                - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
+                - TableName: 
+                    Fn::ImportValue: !Sub "${DynamoDbStackName}-AccessCardAppTableName"
+              - Fn::Sub:
+                - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}/index/*"
+                - TableName: 
+                    Fn::ImportValue: !Sub "${DynamoDbStackName}-AccessCardAppTableName"
       RoleName: EventLambdaFunctionRole
 
   EventLambdaFunctionLogGroup:
