lab3 - #31 Added debug environment variable

--- a/labs/lab3-non-kinesis-example/cloudformation/1500_event_lambda_function.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1500_event_lambda_function.yaml
@@ -111,6 +111,9 @@ Resources:
     Properties: 
       Architectures: 
       - "arm64"
+      Environment:
+        Variables: 
+          DEBUG: "1"
       Code: 
         S3Bucket: !Ref S3SourceBucketParam
         S3Key: !Sub "${LambdaFunctionSourceFileName}.zip"
