--- a/labs/lab3-non-kinesis-example/cloudformation/1000_dynamodb.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1000_dynamodb.yaml
@@ -31,7 +31,7 @@ Resources:
         KeySchema: 
         - AttributeName: "CardIdx"
           KeyType: HASH
-        - AttributeName: "PK"
+        - AttributeName: "SK"
           KeyType: RANGE
         Projection: 
           ProjectionType: "ALL"
