lab3 - #31 reorg dynamodb indexes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
         "ecfdcb",
         "Elbv",
         "eujrkgh",
+        "fgfgf",
+        "fsfs",
         "getenv",
         "githubsync",
         "hashlib",
