--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "lahrt",
         "levelname",
         "localnet",
+        "MAINT",
         "mdep",
         "ncat",
         "nfsnobody",
