lab3 - #37 Added missing permission

--- a/labs/lab3-non-kinesis-example/cloudformation/1500_event_lambda_function.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1500_event_lambda_function.yaml
@@ -84,6 +84,7 @@ Resources:
             - "dynamodb:Scan"
             - "dynamodb:Query"
             - "dynamodb:UpdateItem"
+            - "dynamodb:DeleteItem"
             Resource:
               - Fn::Sub:
                 - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
