lab4: busy creating initial s3 resources

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
         "patchmanager",
         "PCAP",
         "prepopulate",
+        "qpwoeiryt",
         "Redrive",
         "RFID",
         "routable",
