lab4: updated progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "getenv",
         "githubsync",
         "hashlib",
+        "Hewawasam",
         "hexdigest",
         "Hookshot",
         "Hostnames",
@@ -33,6 +34,7 @@
         "kconvert",
         "KEYPAIR",
         "lahrt",
+        "Lakindu",
         "levelname",
         "localnet",
         "MAINT",
@@ -57,6 +59,8 @@
         "routable",
         "setuptools",
         "Snyk",
+        "Sookocheff",
+        "Stackoverflow",
         "strugling",
         "syncserver",
         "tcpdump",
