lab4: busy creating initial s3 resources

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "hashlib",
         "Hewawasam",
         "hexdigest",
+        "HHMMSS",
         "Hookshot",
         "Hostnames",
         "IHRJZE",
@@ -54,6 +55,7 @@
         "PCAP",
         "prepopulate",
         "qpwoeiryt",
+        "qweriuyt",
         "Redrive",
         "RFID",
         "routable",
