lab4: DynamoDB Table Implementation

--- a/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
@@ -73,7 +73,13 @@ Resources:
 Outputs:
 
   ObjectTableName:
-    Description: "DynamoDB AccessCardApp Name"
+    Description: "DynamoDB ObjectTable Name"
     Value: !Ref ObjectTable
     Export:
       Name: !Sub "${AWS::StackName}-ObjectTableName"
+
+  AccountTableName:
+    Description: "DynamoDB AccountTable Name"
+    Value: !Ref AccountTable
+    Export:
+      Name: !Sub "${AWS::StackName}-AccountTableName"
